added effects to webpage

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
     <head>
         <title>CoinClicker</title>
+        <link rel = "stylesheet" href="index.css">
     </head>
     <body>
-     <p id="coinslabel">Coins: 0</p>
-     <p id="gemslabel">Gems:0</p>
-     <button id="CoinClicker">Click for Coins</button>
-     <button id="GemClicker">Click for Gems</button>
-     <script src="index.js"></script>
+        <div class = "container">
+            <p id="coinslabel">Coins: 0</p>
+            <p id="gemslabel">Gems:0</p>
+            <img id="CoinClicker" src="https://i.pinimg.com/originals/f9/da/09/f9da09a345b352d9f6cd4e59f66197c4.png" class = "click-image">
+            <img id="GemClicker" src="https://purepng.com/public/uploads/thumbnail//gemstone-l3g.png" class="click-image">
+            <script src="index.js"></script>
+        </div>
+
     </body>
 </html>
