finished clicker game

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <html>
     <head>
-        <title>CoinClicker</title>
+        <title>TennisBall Clicker</title>
         <link rel = "stylesheet" href="index.css">
     </head>
     <body>
         <div class = "container">
-            <p id="coinslabel">Coins: 0</p>
-            <p id="gemslabel">Gems:0</p>
-            <img id="CoinClicker" src="https://i.pinimg.com/originals/f9/da/09/f9da09a345b352d9f6cd4e59f66197c4.png" class = "click-image">
-            <img id="GemClicker" src="https://purepng.com/public/uploads/thumbnail//gemstone-l3g.png" class="click-image">
+            <p id="coinslabel">Tennis Balls: 0</p>
+
+            <img id="CoinClicker" src="https://www.freeiconspng.com/thumbs/tennis-png/psd-detail--tennis-ball--official-psds-31.png" class = "click-image">
+        <div class = "upgrades">
+            <button id="Machine" class="upgradebutton">Machine ($25)</button>
+            <button id="RogerFederer" class="upgradebutton">Roger Federer ($50)</button>
+            <button id="SuperMachine" class="upgradebutton">Super Machine ($100)</button>
+        </div>
             <script src="index.js"></script>
         </div>
 
