add the NojakDjokovic upgrade

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <button id="Machine" class="upgradebutton">Machine ($25)</button>
             <button id="RogerFederer" class="upgradebutton">Roger Federer ($50)</button>
             <button id="SuperMachine" class="upgradebutton">Super Machine ($100)</button>
+            <button id="NojakDjokovic" class="upgradebutton">Nojak Djokovic ($250)</button>
         </div>
             <script src="index.js"></script>
         </div>
